<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <!-- app_全局资源-->
    <string name="app_name">蛋卷音乐</string>
    <string name="action_search">搜索</string>
    <string name="loading">载入中</string>


    <!-- 主界面_MainFragment-->
    <string name="local_music">本地音乐</string>
    <string name="my_favorite">我的最爱</string>
    <string name="my_download">我的下载</string>
    <string name="my_song_menu">我的歌单</string>
    <string name="recently_play">最近播放</string>
    <string name="good_tone">好音质!</string>


    <!-- 侧滑菜单_DrawerFragment-->
    <string name="sleep_setting">睡眠设置</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>


    <!-- 睡眠设置_SleepSettingsDialog-->
    <string name="stop_after_time">多长时间之后停止播放</string>
    <string name="never">不开启</string>
    <string name="after_ten_minutes">10分钟后</string>
    <string name="after_twenty_minutes">20分钟后</string>
    <string name="after_thirty_minutes">30分钟后</string>
    <string name="after_forty_five_minutes">40分钟后</string>
    <string name="after_sixty_minutes">60分钟后</string>
    <string name="after_ninety_minutes">90分钟后</string>


    <!-- 本地音乐_LocalMusic-->
    <string name="song">歌曲</string>
    <string name="singer">歌手</string>
    <string name="album">专辑</string>
    <string name="folder">文件夹</string>
    <string name="scan_music">扫描音乐</string>
    <string name="sort_by_song_name">按歌曲名排序</string>
    <string name="sort_by_singer_name">按歌手名排序</string>
    <string name="sort_by_add_time">按添加时间排序</string>
    <string name="sort_by_song_num">按歌曲数量排序</string>
    <string name="sort_by_album">按专辑排序</string>
    <string name="sort_by_folder_name">按文件名排序</string>
    <string name="manage_song_batch">批量管理歌曲</string>
    <!-- 本地音乐_LocalMusic-->


    <!-- 歌曲信息_SongInfoDialog-->
    <string name="song_name">歌曲名字</string>
    <string name="singer_name">歌手名字</string>
    <string name="album_name">专辑名字</string>
    <string name="song_style">歌曲风格</string>
    <string name="edit">编辑</string>
    <string name="cancel">取消</string>
    <string name="song_info">歌曲信息</string>

    <!--BaseExpandFragmentAdapter__基类适配器-->
    <string name="collection">收藏</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="delete">删除</string>
    <string name="add">添加</string>
    <string name="set_to_bell">设为铃声</string>
    <string name="share">分享</string>
    <string name="send">发送</string>
    <string name="detailed_information">详细信息</string>

    <!-- 播放列表_SongPlayListFragment-->
    <string name="no_song_in_play_list">播放列表木有歌曲哦</string>

    <!--音乐扫描-->
    <string name="scan_setting">扫描设置</string>
    <string name="filter_by_duration">按时长过滤</string>
    <string name="scan_finish">扫描完成</string>
    <string name="filter_by_file_size">按文件大小过滤</string>
    <string name="scan_all">全盘扫描</string>
    <string name="custom_scan">自定义扫描</string>
    <string name="confirm">确定</string>
    <!--其他-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
