<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--全盘扫描的按钮-->
    <Button
        android:id="@+id/btn_activity_scan_song_scan_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_all"
        android:layout_margin="8dp"/>

    <!--自定义扫描的按钮-->
    <Button
        android:id="@+id/btn_activity_scan_song_custom_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_scan"
        android:layout_margin="8dp"/>

    <!--这是扫描设置按钮-->
    <TextView
        android:id="@+id/tv_activity_scan_song_scan_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center_vertical"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_item_fragment_drawer_setting"
        android:drawableLeft="@drawable/ic_item_fragment_drawer_setting"
        android:drawablePadding="8dp"
        android:text="@string/scan_setting"/>
</LinearLayout>