<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customView="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/ll_fragment_main" android:background="@drawable/bg_fragment_mine">

    <!--标题栏-->
    <com.jf.djplayer.customview.CustomTitles
        android:id="@+id/fragmentTitleLinearLayout_fragment_mine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        customView:custom_titles_title_icon="@drawable/ic_app"
        customView:custom_titles_title_distance="8dp"
        customView:custom_titles_title_text="@string/app_name">
    </com.jf.djplayer.customview.CustomTitles>

    <!-- 我的歌单、最近播放-->
    <LinearLayout
        android:id="@+id/ll_fragment_main_below"
        style="@style/fragment_main_linear_layout"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btn_fragment_mine_song_menu"
            android:drawableLeft="@drawable/ic_fragment_mine_song_menu"
            android:drawableStart="@drawable/ic_fragment_mine_song_menu"
            android:text="@string/my_song_menu"
            style="@style/fragment_main_button"/>
        <Button
            android:id="@+id/btn_fragment_mine_recently_play"
            android:drawableLeft="@drawable/ic_fragment_mine_recently_play"
            android:drawableStart="@drawable/ic_fragment_mine_recently_play"
            android:text="@string/recently_play"
            style="@style/fragment_main_button"/>
    </LinearLayout>

    <!-- 我的最爱、我的下载-->
    <LinearLayout
        android:id="@+id/ll_fragment_main_middle"
        style="@style/fragment_main_linear_layout"
        android:layout_above="@id/ll_fragment_main_below">
        <!--我的最爱-->
        <Button
            android:id="@+id/btn_fragment_main_my_favorite"
            android:drawableLeft="@drawable/ic_base_expand_fragment_adapter_collection"
            android:drawableStart="@drawable/ic_base_expand_fragment_adapter_collection"
            android:text="@string/my_favorite"
            style="@style/fragment_main_button"/>
        <Button
            android:id="@+id/btn_fragment_main_my_down"
            android:drawableLeft="@drawable/ic_fragment_mine_my_download"
            android:drawableStart="@drawable/ic_fragment_mine_my_download"
            android:visibility="visible"
            android:text="@string/my_download"
            style="@style/fragment_main_button"/>

    </LinearLayout>

    <!-- 这个"RelativeLayout"是中间的那个布局-->
    <LinearLayout
        android:id="@+id/ll_fragment_mine_local_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_fragment_main_middle"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:orientation="horizontal"
        android:background="@drawable/blue_white_press_selector">

        <ImageView
            android:id="@+id/iv_fragment_mine_local_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_local_music"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp">
            <TextView
                android:id="@+id/tv_mine_fragment_local_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_music"
                android:textSize="20sp"/>
            <!-- 歌曲数量-->
            <TextView
                android:id="@+id/tv_fragment_main_song_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="0首歌曲"
                android:textSize="16sp" />
        </LinearLayout>

        <!--随机播放，就是中间那个色子-->
        <ImageButton
            android:id="@+id/imgBtn_fragment_mine_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="这是随机播放按钮"
            android:layout_gravity="center_vertical"
            android:background="@drawable/blue_white_press_selector"
            android:src="@drawable/icon_dice"/>
    </LinearLayout>
</RelativeLayout>