<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="歌曲信息"
        android:textSize="24sp"
        android:padding="8dp"/>
    <!-- 分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="#87ceeb"/>

    <!-- 歌曲名字-->
    <LinearLayout
        style="@style/dialog_edit_song_info_linear_layout">
        <TextView
            style="@style/dialog_edit_song_info_text_view"
            android:text="歌曲：" />
        <EditText
            android:id="@+id/et_dialog_edit_songInfo_songName"
            style="@style/dialog_edit_song_info_edit_text"
            android:hint="歌曲名字"/>
    </LinearLayout>

    <!-- 歌手名字-->
    <LinearLayout
        style="@style/dialog_edit_song_info_linear_layout">
        <TextView
            style="@style/dialog_edit_song_info_text_view"
            android:text="歌手：" />
        <EditText
            android:id="@+id/et_dialog_edit_songInfo_artistName"
            style="@style/dialog_edit_song_info_edit_text"
            android:hint="@string/singer_name"/>
    </LinearLayout>

    <!-- 专辑名字-->
    <LinearLayout
        style="@style/dialog_edit_song_info_linear_layout">

        <TextView
            style="@style/dialog_edit_song_info_text_view"
            android:text="专辑：" />
        <EditText
            android:id="@+id/et_dialog_edit_songInfo_album"
            style="@style/dialog_edit_song_info_edit_text"
            android:hint="@string/album_name"/>
    </LinearLayout>

    <!-- 歌曲风格-->
    <LinearLayout
        style="@style/dialog_edit_song_info_linear_layout">

        <TextView
            style="@style/dialog_edit_song_info_text_view"
            android:text="风格：" />
        <EditText
            android:id="@+id/et_dialog_edit_songInfo_style"
            style="@style/dialog_edit_song_info_edit_text"
            android:hint="@string/song_style"/>
    </LinearLayout>

</LinearLayout>